--- a/launch.json
+++ b/launch.json
@@ -30,6 +30,30 @@
                     "ignoreFailures": true
                 }
             ]
+        }, {
+            "name": "(gdb) c++ Launch",
+            "type": "cppdbg",
+            "preLaunchTask": "compile-main.cpp-program",
+            "request": "launch",
+            "program": "/usercode/main.bin",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description":  "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
         }
 
     ]
